# avr-progmem-rs

./: CHANGELOG.md  Cargo.toml  README.md  rust-toolchain.toml  rustfmt.toml  uno-runner.sh
.cargo/: config.toml
.github/workflows/: rust.yml
examples/: test_text.txt  uno-arrays.rs  uno-auto-sizing.rs  uno-pm-string.rs  uno-serial.rs  uno-simple-data.rs  uno-slices.rs  uno-string.rs  uno-timing.rs
examples/bench/: mod.rs
examples/printer/: mod.rs
examples/time/: mod.rs
src/: lib.rs  raw.rs  string.rs  wrapper.rs
src/string/: from_slice.rs  validations.rs
tests/: direct-pm-string.rs  warnings.rs
