[package]
name = "avr-progmem"
version = "0.1.0"
authors = ["Cryptjar <cryptjar@junk.studio>"]
license = "Apache-2.0"
edition = "2018"

description = "Progmem utilities for the AVR architectures"
keywords = ["avr", "arduino", "progmem", "flash", "pgm"]
categories = ["embedded", "no-std", "hardware-support", "memory-management"]
repository = "https://github.com/Cryptjar/avr-progmem-rs"

[features]
default = ["lpm-asm-loop"]
# Enables the use of the `lpm r0, Z+` in an assembly loop, instead of the plain
# `lpm` instruction with a Rust loop.
lpm-asm-loop = []
# Enables some tweak to ease debugging, should not be use in production
dev = []

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cfg-if = "0.1.10"
