[package]
name = "avr-progmem"
version = "0.1.4"
authors = ["Cryptjar <cryptjar@junk.studio>"]
license = "Apache-2.0"
edition = "2018"

description = "Progmem utilities for the AVR architectures"
keywords = ["avr", "arduino", "flash", "lpm", "pgm"]
categories = ["embedded", "no-std", "hardware-support", "memory-management"]
repository = "https://github.com/Cryptjar/avr-progmem-rs"

exclude = ["/.cargo/"]

[package.metadata.docs.rs]
all-features = true

# Profiles only needed for the examples to make them compile
[profile.dev]
panic = "abort"
lto = true
opt-level = "s"

# Profiles only needed for the examples to make them compile
[profile.release]
panic = "abort"
lto = true
opt-level = "s"


[features]
default = ["lpm-asm-loop"]
# Enables the use of the `lpm r0, Z+` in an assembly loop, instead of the plain
# `lpm` instruction with a Rust loop.
lpm-asm-loop = []
# Enables some tweak to ease debugging, should not be use in production
dev = []

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cfg-if = "0.1.10"


[dev-dependencies]
panic-halt = "0.2.0"
ufmt = "0.1.0"

[dev-dependencies.arduino-uno]
# It is not yet available via crates.io
git = "https://github.com/Rahix/avr-hal.git"
rev = "0c6cf1675c2724354f1adeaeee69992acd371e80"

