[package]
name = "avr-progmem"
version = "0.2.1"
authors = ["Cryptjar <cryptjar@junk.studio>"]
license = "Apache-2.0"
edition = "2018"

description = "Progmem utilities for the AVR architectures"
keywords = ["avr", "arduino", "flash", "lpm", "pgm"]
categories = ["embedded", "no-std", "hardware-support", "memory-management"]
repository = "https://github.com/Cryptjar/avr-progmem-rs"

exclude = ["/.cargo/"]

[package.metadata.docs.rs]
all-features = true

# Profiles only needed for the examples to make them compile
[profile.dev]
panic = "abort"
lto = true
opt-level = "s"

# Profiles only needed for the examples to make them compile
[profile.release]
panic = "abort"
lto = true
opt-level = "s"


[features]
default = ["lpm-asm-loop", "ufmt"]
# Enables the use of the `lpm r0, Z+` in an assembly loop, instead of the plain
# `lpm` instruction with a Rust loop.
lpm-asm-loop = []
# Enables some tweak to ease debugging, should not be use in production
dev = []

[dependencies]
cfg-if = "1.0"

[dependencies.ufmt]
version = "0.1.0"
optional = true


[dev-dependencies]
panic-halt = "0.2.0"
ufmt = "0.1.0"
embedded-hal = "0.2.3"

[dev-dependencies.void]
version = "1.0"
default-features = false

[dev-dependencies.avr-device]
version = "0.3"
features = ["atmega328p", "rt"]

[dev-dependencies.arduino-hal]
# It is not yet available via crates.io
git = "https://github.com/Rahix/avr-hal.git"
rev = "e897783816437a677aa577ddfdaa34e9a1e86d96"
features = ["arduino-uno"]

[dev-dependencies.atmega-hal]
# It is not yet available via crates.io
git = "https://github.com/Rahix/avr-hal.git"
rev = "e897783816437a677aa577ddfdaa34e9a1e86d96"


[patch.crates-io]
# Fixes formatting of u32, however, it causes a link error due to u32-div
# Which in turn is fixed (in config.toml) by:
#     build-std-features = ["compiler-builtins-mangled-names"]
ufmt = { git = "https://github.com/mrk-its/ufmt.git", rev = "e6e574625e89bce9a5cb907eae43bfd45672f768" }
